# APC524_Project

./: .pre-commit-config.yaml  LICENSE  MB_dist.py  README.md  mypy.ini  pre_commit.txt  precommit_output.txt  pyproject.toml  pytest_output.txt  requirements.txt  static_type_errors.txt  type_test_errors.txt
.github/workflows/: ci.yml
src/: MB_dist.py  julia_demo.txt  simulation_caller.py
src/example/: MB_dist.py  simulation_caller.py  species_and_particle.py
tests/: test_MB_dist.py  test_MB_dist_basic.py  test_basic.py
